--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^27.5.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
     "eslint": "^8.36.0",
     "eslint-config-codely": "^2.1.3",
