--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/mysql": "^2.15.21",
     "eslint": "^8.36.0",
     "eslint-config-codely": "^2.1.3",
+    "mongoose": "^7.1.0",
     "mysql": "^2.18.1",
     "rimraf": "^4.4.1",
     "ts-jest": "^28.0.0",
